fix css reduce line spacing

--- a/css/my.css
+++ b/css/my.css
@@ -1,5 +1,5 @@
 p {
-	line-height: 35px;
+	line-height: 30px;
 }
 
 .left-side {	
